src/index.css
/* Copyright (c) 2021-2023 Drew Edwards
 * This file is part of KanjiSchool under AGPL-3.0.
 * Full details: https://github.com/Lemmmy/KanjiSchool/blob/master/LICENSE */

@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  overflow: visible;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    'Noto Sans JP',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* Custom scrollbar */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-track {
  background: var(--wk-scrollbar-track-color);
  border-radius: 2px;
}

::-webkit-scrollbar-thumb {
  background: var(--wk-scrollbar-thumb-color);
  border-radius: 2px;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--wk-scrollbar-thumb-hover-color);
}

::-webkit-scrollbar-corner {
  background: var(--wk-scrollbar-track-color);
}

/* Mozilla */
:root {
  scrollbar-color: var(--wk-scrollbar-thumb-color) var(--wk-scrollbar-track-color) !important;
  scrollbar-width: thin !important;
}

/* ant-design menu overrides */
@media (max-width: 576px) {
  /* Make the top menu dropdown full-width and slightly larger on mobile */
  .ant-dropdown.site-header-dropdown-overlay {
    left: 0 !important;
    right: 0 !important;
  }

  .ant-dropdown.site-header-dropdown-overlay > .ant-dropdown-menu {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }

  .ant-dropdown.site-header-dropdown-overlay .ant-dropdown-menu-item {
    padding: 8px 16px;
    font-size: 16px;
  }

  .ant-dropdown.site-header-dropdown-overlay .ant-dropdown-menu-item > span > div {
    margin: -8px -16px;
    padding: 8px 16px;
  }
}

